test/files/neg/t12513.check
predefer_2.scala:10: error: not found: value x
    println((x,y))
             ^
1 error
